--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     ]
   },
   "devDependencies": {
+    "clean-webpack-plugin": "^4.0.0",
     "dotenv-webpack": "^8.1.0",
     "webpack-cli": "^6.0.1"
   }
