--- a/package.json
+++ b/package.json
@@ -44,8 +44,16 @@
     ]
   },
   "devDependencies": {
+    "@svgr/webpack": "^8.1.0",
+    "babel-loader": "^10.0.0",
     "clean-webpack-plugin": "^4.0.0",
+    "css-loader": "^7.1.2",
     "dotenv-webpack": "^8.1.0",
-    "webpack-cli": "^6.0.1"
+    "file-loader": "^6.2.0",
+    "html-webpack-plugin": "^5.6.3",
+    "style-loader": "^4.0.0",
+    "webpack": "^5.99.9",
+    "webpack-cli": "^6.0.1",
+    "webpack-dev-server": "^5.2.1"
   }
 }
