--- a/package.json
+++ b/package.json
@@ -44,6 +44,11 @@
     ]
   },
   "devDependencies": {
+    "@babel/core": "^7.27.4",
+    "@babel/plugin-transform-runtime": "^7.27.4",
+    "@babel/preset-env": "^7.27.2",
+    "@babel/preset-react": "^7.27.1",
+    "@babel/preset-typescript": "^7.27.1",
     "@svgr/webpack": "^8.1.0",
     "babel-loader": "^10.0.0",
     "clean-webpack-plugin": "^4.0.0",
